# microtensor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  array.cpp  array.h  array_test.cpp  lesson-01.cpp  lesson-02.cpp  lesson-03.cpp  lesson-04.cpp  lesson-05.cpp  lesson-06.cpp  main.cpp  nn.cpp  nn.h  nn_test.cpp  tensor.cpp  tensor.h  tensor_test.cpp  test.ipynb  value.cpp  value.h  value_main.cpp
